--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -45,6 +45,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   height: 100%;
+  position: relative;
 }
 .app__form {
   padding: 40px 0;
@@ -96,4 +97,25 @@ color: grey;
 .app__output-message{
   font-size: 12px;
   color: red;
+}
+.app__home{
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 20px;
+  width: 20px;
+  margin-bottom: 20px;
+  cursor: pointer;
+}
+.svg-path{
+  fill:white;
+}
+.svg-path:hover{
+  fill: rgb(222, 255, 35);
+}
+.svg-img{
+  display: block;
+  height: 25px;
+  width:  25px;
+
 }
