--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -91,6 +91,9 @@ body {
 .app__output>div{
   margin-bottom: 10px;
 }
+.app__output-full{
+  word-break: break-all;
+  }
 .app__output-full a{
 color: grey;
 }
@@ -110,12 +113,13 @@ color: grey;
 .svg-path{
   fill:white;
 }
-.svg-path:hover{
-  fill: rgb(222, 255, 35);
-}
+
 .svg-img{
   display: block;
   height: 25px;
   width:  25px;
 
+}
+.svg-img:hover .svg-path{
+  fill: rgb(222, 255, 35);
 }
