--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -33,7 +33,7 @@ body {
   border-radius: 5px;
   background-color:rgba(44, 62, 80,.4);
   height: 300px;
-  max-width: 700px;
+  min-width: 500px;
   color: white;
 }
 .app__title{
