--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -32,20 +32,25 @@ body {
   padding: 40px ;
   border-radius: 5px;
   background-color:rgba(44, 62, 80,.4);
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  height: fit-content;
   min-width: 500px;
+  max-width: 800px;
   color: white;
 }
 .app__title{
   text-align: center;
   line-height: 25px;
+  margin-bottom: 20px;
+  font-size: 22px;
 }
 .app__inner{
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  height: 100%;
-  position: relative;
+  justify-content: flex-start;
+  flex-grow: 1;
+    position: relative;
 }
 .app__form {
   padding: 40px 0;
@@ -53,8 +58,7 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-between;
-  height: 100%;
+  justify-content: flex-start;
 
 }
 .app__form input {
@@ -122,4 +126,27 @@ color: grey;
 }
 .svg-img:hover .svg-path{
   fill: rgb(222, 255, 35);
+}
+.app__output-links-ip-links,
+.app__output-links-sid-links{
+display: flex;
+flex-direction: column;
+}
+.app__output-links-ip-link,
+.app__output-links-sid-link{
+display: flex;
+flex-direction: row;
+justify-content: space-between;
+font-size: 12px;
+color:#a1a1a1;
+}
+.app__output-links-ip-date,
+.app__output-links-sid-date{
+padding-left: 20px;
+color:#a1a1a1;
+font-size: 12px;
+}
+.app__output-links-ip a,
+.app__output-links-sid a{
+  color:#a1a1a1;
 }
