--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -132,21 +132,23 @@ color: grey;
 display: flex;
 flex-direction: column;
 }
-.app__output-links-ip-link,
-.app__output-links-sid-link{
-display: flex;
-flex-direction: row;
-justify-content: space-between;
-font-size: 12px;
-color:#a1a1a1;
+.app__output-links{
+  padding-bottom: 20px;
+  font-size: 14px;
+  color:#a1a1a1;
 }
+.app__output-links-title{
+padding-bottom: 10px;
+color: white;
+}
+
 .app__output-links-ip-date,
 .app__output-links-sid-date{
+  text-align: right;
 padding-left: 20px;
 color:#a1a1a1;
 font-size: 12px;
 }
-.app__output-links-ip a,
-.app__output-links-sid a{
+.app__output-links a{
   color:#a1a1a1;
 }
