--- a/public/assets/style/style.css
+++ b/public/assets/style/style.css
@@ -139,7 +139,8 @@ flex-direction: column;
 }
 .app__output-links-title{
 padding-bottom: 10px;
-color: white;
+color:#a7a6a6;
+font-size: 16px;
 }
 
 .app__output-links-ip-date,
